--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,10 @@
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "danger.html"
   },
   "permissions": [
-    "activeTab",
     "webRequest",
-    "webRequestBlocking",
     "*://*.google.com/",
     "https://ajax.googleapis.com/"
   ]
